--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
-<!Doctype html>
+<!DOCTYPE html>
 <html>
- <Head>
+ <head>
  
- </Head>
+ </head>
  
- <Body>
- <P>Here is Nolan Chostner's Resume</P>
- </Body>
+ <body>
+ <p>Here is Nolan Chostner's Resume</p>
+ </body>
 </html>
 
