--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+d<!DOCTYPE html>
 <html>
  <head>
    <link rel="stylesheet" href="style.css">
@@ -6,6 +6,6 @@
  
  <body>
  <p>Here is Nolan Chostner's Resume</p>
-  <p>Here is an upgrade!</p> 
+  <p>The laod time is fucking annoying</p> 
  </body>
 </html>
