--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-d<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
  <head>
    <link rel="stylesheet" href="style.css">
@@ -7,5 +7,6 @@ d<!DOCTYPE html>
  <body>
  <p>Here is Nolan Chostner's Resume</p>
   <p>The laod time is fucking annoying</p> 
+  <p> This should be intersting </p>
  </body>
 </html>
