--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
  <body>
  <p>Here is Nolan Chostner's Resume</p>
   <p>The laod time is fucking annoying</p> 
-  <p> I don't understand </p>
+  <p>change</p>
  </body>
 </html>
