--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
  <head>
-   <link rel="stylesheet" href="style.css">
+  <h1> Nolan James Chostner </h1>
+  <link rel="stylesheet" href="style.css">
  </head>
  
  <body>
