--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
  <head>
   <h1> Nolan James Chostner </h1>
+  <h2> I am not sure why the css is taking so long to load compared to this index!!!! </h2>
   <link rel="stylesheet" href="style.css">
  </head>
  
