--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
  
  <body>
  <p>Here is Nolan Chostner's Resume</p>
-  <p>The laod time is fucking annoying</p> 
+  <p>The load time is fucking annoying</p> 
   <p>What the fuck</p>
+   <p> I think this might be fun once I get the hang of it? </p>
  </body>
 </html>
