--- a/index.html
+++ b/index.html
@@ -11,5 +11,34 @@
   <p>The load time is fucking annoying</p> 
   <p>What the fuck</p>
    <p> I think this might be fun once I get the hang of it? </p>
+  <p> Nolan Chostner
+19844 N 17th Dr Phoenix AZ 85027 | 623-202-5232 | nolanchostner@yahoo.com
+Objective
+·	Experienced sales associate who is looking for another company to grow with and further achieve success. I want to apply my knowledge of customer service to help ensure a positive experience for the customer.
+Education
+GENERAL EDUCATION DIPLOMA | 2011 | GLENDALE COMMUNITY COLLEGE
+
+ | UINVERSAL TECHNICAL INSTITUTE 
+Completed 3 courses required for a Bachelor’s Degree in Auto- Diesel Mechanics
+·	Attended the school from September 2015 through June 2016
+Skills & Abilities
+MANAGEMENT
+·	Assistant Manager at Jackons Food Stores, Managing the concession stand at AMC Theaters. Both positions require the ability to properly manage time and employees. Prompting me to be capable of multi-tasking while preforming quality work.
+SALES
+·	With a plethora of experience in customer service, sales come naturally to me and allows me to establish a positive relationship with the customer(s) further increasing my ability to sell to customers. Also I have experience with add on sales or suggestive selling. 
+COMMUNICATION
+·	Presenting myself to others in introductions is something that I can do with ease and comfort. Talking with my fellow coworkers about tasks that need to be accomplished or explain how a procedure is properly completed. I believe that it is vital to a function workplace to properly convey any discrepancies that someone may have to prevent from any negative connotations. 
+LEADERSHIP
+·	As an Assistant Manager setting a proper leadership example is important for my employees. I am not afraid to take charge over a situation and make sure it is taken care of. I also take on a leadership role within my family, as I am the predominate “father figure” in my nephew’s life. This puts the standard of being a role model that is appropriate for a child, or for any one for that matter.
+Experience
+SALES ASSOCIATE | WALMART | NOVEMBER 2010 – FEBRUARY 2012
+·	Starting out as just a cart pusher I worked my way up to be part of the overnight stock crew. This taught me how to be productive in the upmost efficient way, have self-discipline, time management, and to make sure the job is done properly.
+SALES ASSOCIATE | AMC THEATERS | MARCH 2013 – FEBRUARY 2014 
+·	Starting out as a counter cashier I worked my way up to being a bar back at the concession stands, this was a physically demanding job that needed to be completed within a certain time range. I was then promoted to running the entire concession stand and allowing my coworkers to get their breaks and solve any issues that surfaced.
+
+CUSTOMER SALES REPRESENTATIVE | JACKSONS FOOD STORES | FEBRAURY 2014 - 
+·	Starting out as a cashier who had typical duties such as putting away stock, stocking the coolers, and making sure that the coffee was always fresh.  As I continued to work with the company my responsibilities grew. I began working the overnight shift and this put me in charge of running the store alone and making sure that it was ready for the morning crew. I also moved up to be an assistant in training, it was turning that time I transferred to a different store to learn how the other stores functioned. After completing my training, I was moved to another store which allowed me to officially be an assistant manager. It was during this time that I increased sales and over all traffic flow of the store. It was due to this vast improvement in the store I was then moved to another store which is busier and allowing me another opportunity to improve the store and increase sales. 
+
+  </p>
  </body>
 </html>
