--- a/index.html
+++ b/index.html
@@ -8,19 +8,22 @@
  <body>
 
   <div>
-				</div>Nolan Chostner
+				Nolan Chostner
 19844 N 17th Dr Phoenix AZ 85027 | 623-202-5232 | nolanchostner@yahoo.com
 </div>
- <p>
+ <div>
 Objective
 ·	Experienced sales associate who is looking for another company to grow with and further achieve success. I want to apply my knowledge of customer service to help ensure a positive experience for the customer.
-Education
+	 </div>
+	 <div>
+	 Education
 GENERAL EDUCATION DIPLOMA | 2011 | GLENDALE COMMUNITY COLLEGE
 
  | UINVERSAL TECHNICAL INSTITUTE 
 Completed 3 courses required for a Bachelor’s Degree in Auto- Diesel Mechanics
 ·	Attended the school from September 2015 through June 2016
-Skills & Abilities
+	 </div>
+	 Skills & Abilities
 MANAGEMENT
 ·	Assistant Manager at Jackons Food Stores, Managing the concession stand at AMC Theaters. Both positions require the ability to properly manage time and employees. Prompting me to be capable of multi-tasking while preforming quality work.
 SALES
