--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
  <body>
 
   <div>
+	  <p>
 				Nolan Chostner
 19844 N 17th Dr Phoenix AZ 85027 | 623-202-5232 | nolanchostner@yahoo.com
-</div>
+	  </p>	</div>
  <div>
 Objective
 ·	Experienced sales associate who is looking for another company to grow with and further achieve success. I want to apply my knowledge of customer service to help ensure a positive experience for the customer.
