--- a/index.html
+++ b/index.html
@@ -12,18 +12,19 @@
 				Nolan Chostner
 19844 N 17th Dr Phoenix AZ 85027 | 623-202-5232 | nolanchostner@yahoo.com
 	  </p>	</div>
- <div>
+ <div>	
+	 <p>
 Objective
 ·	Experienced sales associate who is looking for another company to grow with and further achieve success. I want to apply my knowledge of customer service to help ensure a positive experience for the customer.
-	 </div>
-	 <div>
+	 </p>	 </div>
+<p>	 <div>
 	 Education
 GENERAL EDUCATION DIPLOMA | 2011 | GLENDALE COMMUNITY COLLEGE
 
  | UINVERSAL TECHNICAL INSTITUTE 
 Completed 3 courses required for a Bachelor’s Degree in Auto- Diesel Mechanics
 ·	Attended the school from September 2015 through June 2016
-	 </div>
+	 </p>	 </div>
 	 
 	 
 	 
