--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@ Completed 3 courses required for a Bachelor’s Degree in Auto- Diesel Mechanics
 	 
 	 
 	 <div>
+		 <p>
 	 Skills & Abilities
 MANAGEMENT
 ·	Assistant Manager at Jackons Food Stores, Managing the concession stand at AMC Theaters. Both positions require the ability to properly manage time and employees. Prompting me to be capable of multi-tasking while preforming quality work.
@@ -38,10 +39,11 @@ COMMUNICATION
 ·	Presenting myself to others in introductions is something that I can do with ease and comfort. Talking with my fellow coworkers about tasks that need to be accomplished or explain how a procedure is properly completed. I believe that it is vital to a function workplace to properly convey any discrepancies that someone may have to prevent from any negative connotations. 
 LEADERSHIP
 ·	As an Assistant Manager setting a proper leadership example is important for my employees. I am not afraid to take charge over a situation and make sure it is taken care of. I also take on a leadership role within my family, as I am the predominate “father figure” in my nephew’s life. This puts the standard of being a role model that is appropriate for a child, or for any one for that matter.
-	 </div>
+		 </p>	 </div>
 	 
 	 
-	 Experience
+<div>
+<p>	Experience
 SALES ASSOCIATE | WALMART | NOVEMBER 2010 – FEBRUARY 2012
 ·	Starting out as just a cart pusher I worked my way up to be part of the overnight stock crew. This taught me how to be productive in the upmost efficient way, have self-discipline, time management, and to make sure the job is done properly.
 SALES ASSOCIATE | AMC THEATERS | MARCH 2013 – FEBRUARY 2014 
@@ -50,6 +52,7 @@ SALES ASSOCIATE | AMC THEATERS | MARCH 2013 – FEBRUARY 2014
 CUSTOMER SALES REPRESENTATIVE | JACKSONS FOOD STORES | FEBRAURY 2014 - 
 ·	Starting out as a cashier who had typical duties such as putting away stock, stocking the coolers, and making sure that the coffee was always fresh.  As I continued to work with the company my responsibilities grew. I began working the overnight shift and this put me in charge of running the store alone and making sure that it was ready for the morning crew. I also moved up to be an assistant in training, it was turning that time I transferred to a different store to learn how the other stores functioned. After completing my training, I was moved to another store which allowed me to officially be an assistant manager. It was during this time that I increased sales and over all traffic flow of the store. It was due to this vast improvement in the store I was then moved to another store which is busier and allowing me another opportunity to improve the store and increase sales. 
 
-  
+	</p>
+	</div>
  </body>
 </html>
