--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   
   <link rel="stylesheet" href="style.css">
  </head>
-	<p style="color: #FF0000;">This paragraph is now red</p>
+	<p style="color: #FF0000;"> </p>
  <body>
 
   <div>
