--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
  <body>
 
   <div>
-	  <p>
+	  <h1>
 				Nolan Chostner
 19844 N 17th Dr Phoenix AZ 85027 | 623-202-5232 | nolanchostner@yahoo.com
-	  </p>	</div>
+	  </h1>	</div>
  <div>	
 	 <p>
 Objective
