--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
  <head>
-  <h1 style="color: #ADD8E6;">
+	 <h1 style="color: #ADD8E6;"> </h1>
   <link rel="stylesheet" href="style.css">
  </head>
 	<p style="color: #FF0000;"> </p>
