--- a/index.html
+++ b/index.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
 <html>
  <head>
-	 
- 
- </head>
-	<p style="color: #FF0000;"> </p>
-	
+	<h1 style="color: #ADD8E6;"> </h1> 
+ 	<p style="color: #FF0000;"> </p>
+</head>
  <body>
 
   <div>
