--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 
   <div>
 	  <h1> 	
-		  
+		  <br>
 				Nolan Chostner
 19844 N 17th Dr Phoenix AZ 85027 | 623-202-5232 | nolanchostner@yahoo.com
-	  </h1>	</div>
+		  </br>  </h1>	</div>
  <div>	
 	 <p>
 Objective
