--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
 	
 </head>
  <body>
+	 <style>
 <h1 style="color: #ADD8E6;"></h1> 
  	<p style="color: #FF0000;"></p>
+		 </style>
   <div>
 	  <h1> 	
 		  <br>
