--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
 </head>
  <body>
 	
-<h1 style="color:#ADD8E6;"></h1> 
- 	<p style="color:#FF0000;"></p>
+<h1 style="color:#ADD8E6;">cvbcvb</h1> 
+ 	<p style="color:#FF0000;">cvbcvbcvb</p>
 		 
   <div>
 	  <h1> 	
-		  <br>
+		
 				Nolan Chostner
 19844 N 17th Dr Phoenix AZ 85027 | 623-202-5232 | nolanchostner@yahoo.com
-		  </br>  </h1>	</div>
+		   </h1>	</div>
  <div>	
 	 <p>
 Objective
