--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
 </head>
  <body>
 	
-<h1 style="color:#ADD8E6;">cvbcvb</h1> 
- 	<p style="color:#FF0000;">cvbcvbcvb</p>
+
+ 	<p style="color:#FF0000;"></p>
 		 
   <div>
 	  <h1> 	
 		
-				Nolan Chostner
-19844 N 17th Dr Phoenix AZ 85027 | 623-202-5232 | nolanchostner@yahoo.com
+				<h1 style="color:#ADD8E6;">Nolan Chostner
+19844 N 17th Dr Phoenix AZ 85027 | 623-202-5232 | nolanchostner@yahoo.com</h1>
 		   </h1>	</div>
  <div>	
 	 <p>
