--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
  <body>
 	
 
- 	<p style="color:#FF0000;"></p>
+ 	
 		 
   <div>
 	  <h1> 	
@@ -16,7 +16,7 @@
 		   </h1>	</div>
  <div>	
 	 <p>
-Objective
+<p style="color:#FF0000;">Objective
 ·	Experienced sales associate who is looking for another company to grow with and further achieve success. I want to apply my knowledge of customer service to help ensure a positive experience for the customer.
 	 </p>	 </div>
 <p>	 <div>
@@ -54,7 +54,7 @@ SALES ASSOCIATE | AMC THEATERS | MARCH 2013 – FEBRUARY 2014
 CUSTOMER SALES REPRESENTATIVE | JACKSONS FOOD STORES | FEBRAURY 2014 - 
 ·	Starting out as a cashier who had typical duties such as putting away stock, stocking the coolers, and making sure that the coffee was always fresh.  As I continued to work with the company my responsibilities grew. I began working the overnight shift and this put me in charge of running the store alone and making sure that it was ready for the morning crew. I also moved up to be an assistant in training, it was turning that time I transferred to a different store to learn how the other stores functioned. After completing my training, I was moved to another store which allowed me to officially be an assistant manager. It was during this time that I increased sales and over all traffic flow of the store. It was due to this vast improvement in the store I was then moved to another store which is busier and allowing me another opportunity to improve the store and increase sales. 
 
-	</p>
+	</p></p>
 	</div>
  </body>
 </html>
