--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 <p style="color:#FF0000;">Objective
 ·	Experienced sales associate who is looking for another company to grow with and further achieve success. I want to apply my knowledge of customer service to help ensure a positive experience for the customer.
 	 </p>	 </div>
-<p>	 <div>
+<p>	<p style="color:#FF0000;"> 
+<div>
 	 Education
 GENERAL EDUCATION DIPLOMA | 2011 | GLENDALE COMMUNITY COLLEGE
 
@@ -32,6 +33,7 @@ Completed 3 courses required for a Bachelor’s Degree in Auto- Diesel Mechanics
 	 
 	 <div>
 		 <p>
+			<p style="color:#FF0000;"> 
 	 Skills & Abilities
 MANAGEMENT
 ·	Assistant Manager at Jackons Food Stores, Managing the concession stand at AMC Theaters. Both positions require the ability to properly manage time and employees. Prompting me to be capable of multi-tasking while preforming quality work.
@@ -45,7 +47,9 @@ LEADERSHIP
 	 
 	 
 <div>
-<p>	Experience
+	
+<p>	<p style="color:#FF0000;">
+	Experience
 SALES ASSOCIATE | WALMART | NOVEMBER 2010 – FEBRUARY 2012
 ·	Starting out as just a cart pusher I worked my way up to be part of the overnight stock crew. This taught me how to be productive in the upmost efficient way, have self-discipline, time management, and to make sure the job is done properly.
 SALES ASSOCIATE | AMC THEATERS | MARCH 2013 – FEBRUARY 2014 
@@ -54,7 +58,7 @@ SALES ASSOCIATE | AMC THEATERS | MARCH 2013 – FEBRUARY 2014
 CUSTOMER SALES REPRESENTATIVE | JACKSONS FOOD STORES | FEBRAURY 2014 - 
 ·	Starting out as a cashier who had typical duties such as putting away stock, stocking the coolers, and making sure that the coffee was always fresh.  As I continued to work with the company my responsibilities grew. I began working the overnight shift and this put me in charge of running the store alone and making sure that it was ready for the morning crew. I also moved up to be an assistant in training, it was turning that time I transferred to a different store to learn how the other stores functioned. After completing my training, I was moved to another store which allowed me to officially be an assistant manager. It was during this time that I increased sales and over all traffic flow of the store. It was due to this vast improvement in the store I was then moved to another store which is busier and allowing me another opportunity to improve the store and increase sales. 
 
-	</p></p>
+	</p>
 	</div>
  </body>
 </html>
