--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
   <div>
 	  <h1> 	
 		
-				<h1 <b> Nolan Chostner
+				 <b> Nolan Chostner
 19844 N 17th Dr Phoenix AZ 85027 | 623-202-5232 | nolanchostner@yahoo.com</h1>
-		   </h1>	</div>
+		  </b>	</div>
  <div>	
 	 <p>
 <p style="color:#FF0000;">Objective
