--- a/index.html
+++ b/index.html
@@ -11,17 +11,18 @@
   <div>
 	  <h1> 	
 		
-				 <b> Nolan Chostner
+				<h1> <b> Nolan Chostner
 19844 N 17th Dr Phoenix AZ 85027 | 623-202-5232 | nolanchostner@yahoo.com</h1>
-		  </b>	</div>
+					</b>	</h1>
+	 </div>
  <div>	
 	 <p>
 <p style="color:#FF0000;">Objective
 ·	Experienced sales associate who is looking for another company to grow with and further achieve success. I want to apply my knowledge of customer service to help ensure a positive experience for the customer.
 	 </p>	 </div>
-<p>	<p style="color:#FF0000;"> 
-<div>
-	 Education
+ <div>
+	<p style="color:#FF0000;">
+	 Education<p>	
 GENERAL EDUCATION DIPLOMA | 2011 | GLENDALE COMMUNITY COLLEGE
 
  | UINVERSAL TECHNICAL INSTITUTE 
