--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
   <div>
 	  <h1> 	
 		
-				<h1> <b> Nolan Chostner
+				<h1 style="font-weight: bold;" Nolan Chostner
 19844 N 17th Dr Phoenix AZ 85027 | 623-202-5232 | nolanchostner@yahoo.com</h1>
-					</b>	</h1>
+						</h1>
 	 </div>
  <div>	
 	 <p>
@@ -22,7 +22,7 @@
 	 </p>	 </div>
  <div>
 	<p style="color:#FF0000;">
-	 Education<p>	
+	 Education
 GENERAL EDUCATION DIPLOMA | 2011 | GLENDALE COMMUNITY COLLEGE
 
  | UINVERSAL TECHNICAL INSTITUTE 
