--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
   <div>
 	  <h1> 	
 		
-				<h1 style="font-weight: bold;" Nolan Chostner
+				<h1 style="font-weight: bold;">
+					Nolan Chostner
 19844 N 17th Dr Phoenix AZ 85027 | 623-202-5232 | nolanchostner@yahoo.com</h1>
 						</h1>
 	 </div>
