--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
   <div>
 	  <h1> 	
 		
-				<h1 style="font-weight: bold;">
+				<font size="6">
 					Nolan Chostner
 19844 N 17th Dr Phoenix AZ 85027 | 623-202-5232 | nolanchostner@yahoo.com</h1>
-						</h1>
+						</font>
 	 </div>
  <div>	
 	 <p>
