--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ Completed 3 courses required for a Bachelor’s Degree in Auto- Diesel Mechanics
 	 
 	 <div>
 		 <p>
-			<p style="color:#FF0000;"> 
+			<font size="7"><p style="color:#FF0000;"> 
 	 Skills & Abilities
 MANAGEMENT
 ·	Assistant Manager at Jackons Food Stores, Managing the concession stand at AMC Theaters. Both positions require the ability to properly manage time and employees. Prompting me to be capable of multi-tasking while preforming quality work.
@@ -45,7 +45,7 @@ COMMUNICATION
 ·	Presenting myself to others in introductions is something that I can do with ease and comfort. Talking with my fellow coworkers about tasks that need to be accomplished or explain how a procedure is properly completed. I believe that it is vital to a function workplace to properly convey any discrepancies that someone may have to prevent from any negative connotations. 
 LEADERSHIP
 ·	As an Assistant Manager setting a proper leadership example is important for my employees. I am not afraid to take charge over a situation and make sure it is taken care of. I also take on a leadership role within my family, as I am the predominate “father figure” in my nephew’s life. This puts the standard of being a role model that is appropriate for a child, or for any one for that matter.
-		 </p>	 </div>
+		</font> </p>	 </div>
 	 
 	 
 <div>
