--- a/index.html
+++ b/index.html
@@ -11,10 +11,12 @@
   <div>
 	  <h1> 	
 		
-				<font size="6">
+				h1 {
+  font-style: italic;
+}
 					Nolan Chostner
 19844 N 17th Dr Phoenix AZ 85027 | 623-202-5232 | nolanchostner@yahoo.com</h1>
-						</font>
+						
 	 </div>
  <div>	
 	 <p>
@@ -35,7 +37,7 @@ Completed 3 courses required for a Bachelor’s Degree in Auto- Diesel Mechanics
 	 
 	 <div>
 		 <p>
-			<font size="7"><p style="color:#FF0000;"> 
+			<font size="4"><p style="color:#FF0000;"> 
 	 Skills & Abilities
 MANAGEMENT
 ·	Assistant Manager at Jackons Food Stores, Managing the concession stand at AMC Theaters. Both positions require the ability to properly manage time and employees. Prompting me to be capable of multi-tasking while preforming quality work.
