--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 				h1 {
   font-style: italic;
 }
-					Nolan Chostner
+					<h1 class="b">Nolan Chostner
 19844 N 17th Dr Phoenix AZ 85027 | 623-202-5232 | nolanchostner@yahoo.com</h1>
 						
 	 </div>
