--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
  	
 		 
   <div>
-	  <h1> 	
+	   	
 		
-				h1 {
+h1.1 {
   font-style: italic;
-}
-					<h1 class="b">Nolan Chostner
+} <h1>
+	 
+					<h1 class="1">Nolan Chostner
 19844 N 17th Dr Phoenix AZ 85027 | 623-202-5232 | nolanchostner@yahoo.com</h1>
 						
 	 </div>
