--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 						
 	 </div>
  <div>	
-	 <p>
+	 <p> <font size="4">
 <p style="color:#FF0000;">Objective
 ·	Experienced sales associate who is looking for another company to grow with and further achieve success. I want to apply my knowledge of customer service to help ensure a positive experience for the customer.
 	 </p>	 </div>
@@ -37,7 +37,7 @@ Completed 3 courses required for a Bachelor’s Degree in Auto- Diesel Mechanics
 	 
 	 <div>
 		 <p>
-			<font size="4"><p style="color:#FF0000;"> 
+			<p style="color:#FF0000;"> 
 	 Skills & Abilities
 MANAGEMENT
 ·	Assistant Manager at Jackons Food Stores, Managing the concession stand at AMC Theaters. Both positions require the ability to properly manage time and employees. Prompting me to be capable of multi-tasking while preforming quality work.
@@ -47,7 +47,7 @@ COMMUNICATION
 ·	Presenting myself to others in introductions is something that I can do with ease and comfort. Talking with my fellow coworkers about tasks that need to be accomplished or explain how a procedure is properly completed. I believe that it is vital to a function workplace to properly convey any discrepancies that someone may have to prevent from any negative connotations. 
 LEADERSHIP
 ·	As an Assistant Manager setting a proper leadership example is important for my employees. I am not afraid to take charge over a situation and make sure it is taken care of. I also take on a leadership role within my family, as I am the predominate “father figure” in my nephew’s life. This puts the standard of being a role model that is appropriate for a child, or for any one for that matter.
-		</font> </p>	 </div>
+		 </p>	 </div>
 	 
 	 
 <div>
@@ -63,6 +63,6 @@ CUSTOMER SALES REPRESENTATIVE | JACKSONS FOOD STORES | FEBRAURY 2014 -
 ·	Starting out as a cashier who had typical duties such as putting away stock, stocking the coolers, and making sure that the coffee was always fresh.  As I continued to work with the company my responsibilities grew. I began working the overnight shift and this put me in charge of running the store alone and making sure that it was ready for the morning crew. I also moved up to be an assistant in training, it was turning that time I transferred to a different store to learn how the other stores functioned. After completing my training, I was moved to another store which allowed me to officially be an assistant manager. It was during this time that I increased sales and over all traffic flow of the store. It was due to this vast improvement in the store I was then moved to another store which is busier and allowing me another opportunity to improve the store and increase sales. 
 
 	</p>
-	</div>
+	</font> </div>
  </body>
 </html>
