--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	   	
 	<h1>
 	     
-	     				<i>Nolan Chostner
+	     				<h1 style="color:#FF0000;"><i>Nolan Chostner
 19844 N 17th Dr Phoenix AZ 85027 | 623-202-5232 | nolanchostner@yahoo.com
 	  </i>
 	  </h1>
