--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	
 </head>
  <body>
-	<body style="background-color:black;">
+	<body style="background-image:https://lh3.googleusercontent.com/-iKXq0HrSikE/VM6ZKX1LAFI/AAAAAAAABx8/O2L3tOofMGE/s1600/grey-wallpaper-beach-photography-wallpaper-basic-background.jpg;">
 
  	
 		 
