--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	
 </head>
  <body>
-	<link rel="background:img" href="341.jpg">
+	<link rel="background=img src=" href="341.jpg">
  	
 		 
   <div>
