--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	
 </head>
  <body>
-	<link rel="image"="background"="img src=" href="341.jpg">
+	<link rel="image" href="341.jpg">
  	
 		 
   <div>
