--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html>
  <head>
 	<img src="341.jpg">
-	 <body background="341.jpg">
+	 
 </head>
  <body>
-		 
-  <div>
+<div>		<body background="341.jpg"> 
+	</div>
+	<div>
 	   	
 	<h1>
 	     
