--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
  <head>
-	<img src="341.jpg">
 	 
 </head>
  <body>
-<div>		<body background="341.jpg"> 
+<div>	<img src="341.jpg">
+	<body background="341.jpg"> 
 	</div>
 	<div>
 	   	
