--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	 
 </head>
  <body>
-<div>	<img src="341.jpg">
+<div>	<img src="341.jpg" width="500" height="600">
 	<body background="341.jpg"> 
 	</div>
 	<div>
