--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 	 
 </head>
  <body>
-<div>	<img src="341.jpg" width="400" height="500">
-	
+<div>	<body style="margin: 0px; background: #0e0e0e;"><img style="-webkit-user-select: none;" src="https://raw.githubusercontent.com/NolanChostner/NolanChostner.github.io/master/341.JPG"></body>
+	<img style="-webkit-user-select: none;" src="https://raw.githubusercontent.com/NolanChostner/NolanChostner.github.io/master/341.JPG">
 	</div>
 	<div>
 	   	
