--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	 
 </head>
  <body>
-<div>	<body style="margin: 0px; background: #0e0e0e;"><img style="-webkit-user-select: none;" src="https://raw.githubusercontent.com/NolanChostner/NolanChostner.github.io/master/341.JPG"></body>
+<div>	<body background="margin: 0px; background: #0e0e0e;"><img style="-webkit-user-select: none;" src="https://raw.githubusercontent.com/NolanChostner/NolanChostner.github.io/master/341.JPG"></body>
 	<img style="-webkit-user-select: none;" src="https://raw.githubusercontent.com/NolanChostner/NolanChostner.github.io/master/341.JPG">
 	</div>
 	<div>
