--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 ·	Experienced sales associate who is looking for another company to grow with and further achieve success. I want to apply my knowledge of customer service to help ensure a positive experience for the customer.
 	 </p>	 </div>
  <div>
+	 <ul>  
 	<p style="color:#FF0000;">
 	 Education
 GENERAL EDUCATION DIPLOMA | 2011 | GLENDALE COMMUNITY COLLEGE
@@ -29,7 +30,7 @@ GENERAL EDUCATION DIPLOMA | 2011 | GLENDALE COMMUNITY COLLEGE
  | UINVERSAL TECHNICAL INSTITUTE 
 Completed 3 courses required for a Bachelor’s Degree in Auto- Diesel Mechanics
 ·	Attended the school from September 2015 through June 2016
-	 </p>	 </div>
+	 </ul>	 </p>	 </div>
 	 
 	 
 	 
