--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
  <div>
 	 <ul>  
 	<p style="color:#FF0000;">
-	 Education
-GENERAL EDUCATION DIPLOMA | 2011 | GLENDALE COMMUNITY COLLEGE
+	<h2> Education
+		GENERAL EDUCATION DIPLOMA | 2011 | GLENDALE COMMUNITY COLLEGE </h2>
 
  | UINVERSAL TECHNICAL INSTITUTE 
  <li>	Completed 3 courses required for a Bachelor’s Degree in Auto- Diesel Mechanics
