--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 	 <div>
 		 <p>
 			<p style="color:#FF0000;"> 
-				<u> Skills & Abilities </u>
-MANAGEMENT
+				<u> Skills & Abilities	MANAGEMENT </u>
+
 ·	Assistant Manager at Jackons Food Stores, Managing the concession stand at AMC Theaters. Both positions require the ability to properly manage time and employees. Prompting me to be capable of multi-tasking while preforming quality work.
 SALES
 ·	With a plethora of experience in customer service, sales come naturally to me and allows me to establish a positive relationship with the customer(s) further increasing my ability to sell to customers. Also I have experience with add on sales or suggestive selling. 
