--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 	 <div>
 		 <p>
 			<p style="color:#FF0000;"> 
-				<u> Skills & Abilities	MANAGEMENT </u>
+		 <h3>	<u> Skills & Abilities	MANAGEMENT </u> </h3>
 
 ·	Assistant Manager at Jackons Food Stores, Managing the concession stand at AMC Theaters. Both positions require the ability to properly manage time and employees. Prompting me to be capable of multi-tasking while preforming quality work.
 SALES
