--- a/index.html
+++ b/index.html
@@ -54,12 +54,12 @@ LEADERSHIP
 	
 <p>	
 	<h4>	Experience	</h4>	
-<li>	SALES ASSOCIATE | WALMART | NOVEMBER 2010 – FEBRUARY 2012
+	<li>	<u>	SALES ASSOCIATE | WALMART | NOVEMBER 2010 – FEBRUARY 2012 </u>
 ·	Starting out as just a cart pusher I worked my way up to be part of the overnight stock crew. This taught me how to be productive in the upmost efficient way, have self-discipline, time management, and to make sure the job is done properly.
 <i>	SALES ASSOCIATE | AMC THEATERS | MARCH 2013 – FEBRUARY 2014 
 ·	Starting out as a counter cashier I worked my way up to being a bar back at the concession stands, this was a physically demanding job that needed to be completed within a certain time range. I was then promoted to running the entire concession stand and allowing my coworkers to get their breaks and solve any issues that surfaced.
 
-<li>	CUSTOMER SALES REPRESENTATIVE | JACKSONS FOOD STORES | FEBRAURY 2014 - 
+	<li>	<u>	CUSTOMER SALES REPRESENTATIVE | JACKSONS FOOD STORES | FEBRAURY 2014 - </u>
 ·	Starting out as a cashier who had typical duties such as putting away stock, stocking the coolers, and making sure that the coffee was always fresh.  As I continued to work with the company my responsibilities grew. I began working the overnight shift and this put me in charge of running the store alone and making sure that it was ready for the morning crew. I also moved up to be an assistant in training, it was turning that time I transferred to a different store to learn how the other stores functioned. After completing my training, I was moved to another store which allowed me to officially be an assistant manager. It was during this time that I increased sales and over all traffic flow of the store. It was due to this vast improvement in the store I was then moved to another store which is busier and allowing me another opportunity to improve the store and increase sales. 
 	</li>
 	</p>
