--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 	 
 	 
 	 <div>
-		 <p>
+		 <p <font size="4">
 			
 		 <h3>	<u> Skills & Abilities	MANAGEMENT </u> </h3>
 
@@ -52,7 +52,7 @@ LEADERSHIP
 	 
 <div>
 	
-<p>	
+<p <font size="4">
 	<h4>	Experience	</h4>	
 	<li>	<u>	SALES ASSOCIATE | WALMART | NOVEMBER 2010 – FEBRUARY 2012 </u>
 ·	Starting out as just a cart pusher I worked my way up to be part of the overnight stock crew. This taught me how to be productive in the upmost efficient way, have self-discipline, time management, and to make sure the job is done properly.
