--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	 <p <font size="4">
 
 ·	Experienced sales associate who is looking for another company to grow with and further achieve success. I want to apply my knowledge of customer service to help ensure a positive experience for the customer.
-	 </p>	 </div>
+	 </font> </p>	 </div>
  <div>
 	 <ul>  
 	<p>
