--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
 </head>
  <body>
 	
-
+	 <p style="font-size:12px;">
 	<div id="container">
 		<div id="content-contact">
 			<h1>Nolan James Chostner</h1>
 			<h2>19844 N 17th Dr</h2>
 			<h2>Phoenix AZ 85027</h2>
 			<h2>623-202-5232</h2>
-		</div>						
+		</div>	</p>					
 	 </div>
  <div>	
 	 <p <font size="6">
