--- a/index.html
+++ b/index.html
@@ -5,35 +5,35 @@
 </head>
  <body>
 	
-	 <p style="font-size:12px;">
+	 
 	<div id="container">
 		<div id="content-contact">
 			<h1>Nolan James Chostner</h1>
 			<h2>19844 N 17th Dr</h2>
 			<h2>Phoenix AZ 85027</h2>
 			<h2>623-202-5232</h2>
-		</div>	</p>					
+		</div>						
 	 </div>
  <div>	
-	 <p <font size="6">
+	 
 
 ·	Experienced sales associate who is looking for another company to grow with and further achieve success. I want to apply my knowledge of customer service to help ensure a positive experience for the customer.
-	 </font> </p>	 </div>
+	 </font> 	 </div>
  <div>
 	 <ul>  
-	<p>
+	
 	<h2> Education
 		GENERAL EDUCATION DIPLOMA | 2011 | GLENDALE COMMUNITY COLLEGE </h2>
 
  | UINVERSAL TECHNICAL INSTITUTE 
  <li>	Completed 3 courses required for a Bachelor’s Degree in Auto- Diesel Mechanics
 ·	 <li>	Attended the school from September 2015 through June 2016
-		</li> </ul>	 </p>	 </div>
+		</li> </ul>	 	 </div>
 	 
 	 
 	 
 	 <div>
-		 <p <font size="4">
+		
 			
 		 <h3>	<u> Skills & Abilities	MANAGEMENT </u> </h3>
 
@@ -44,12 +44,12 @@ COMMUNICATION
 ·	Presenting myself to others in introductions is something that I can do with ease and comfort. Talking with my fellow coworkers about tasks that need to be accomplished or explain how a procedure is properly completed. I believe that it is vital to a function workplace to properly convey any discrepancies that someone may have to prevent from any negative connotations. 
 LEADERSHIP
 ·	As an Assistant Manager setting a proper leadership example is important for my employees. I am not afraid to take charge over a situation and make sure it is taken care of. I also take on a leadership role within my family, as I am the predominate “father figure” in my nephew’s life. This puts the standard of being a role model that is appropriate for a child, or for any one for that matter.
-		 </p>	 </div>
+		 	 </div>
 	 
 	 
 <div>
 	
-<p <font size="4">
+
 	<h4>	Experience	</h4>	
 	<li>	<u>	SALES ASSOCIATE | WALMART | NOVEMBER 2010 – FEBRUARY 2012 </u>
 ·	Starting out as just a cart pusher I worked my way up to be part of the overnight stock crew. This taught me how to be productive in the upmost efficient way, have self-discipline, time management, and to make sure the job is done properly.
@@ -59,7 +59,7 @@ LEADERSHIP
 	<li>	<u>	CUSTOMER SALES REPRESENTATIVE | JACKSONS FOOD STORES | FEBRAURY 2014 - </u>
 ·	Starting out as a cashier who had typical duties such as putting away stock, stocking the coolers, and making sure that the coffee was always fresh.  As I continued to work with the company my responsibilities grew. I began working the overnight shift and this put me in charge of running the store alone and making sure that it was ready for the morning crew. I also moved up to be an assistant in training, it was turning that time I transferred to a different store to learn how the other stores functioned. After completing my training, I was moved to another store which allowed me to officially be an assistant manager. It was during this time that I increased sales and over all traffic flow of the store. It was due to this vast improvement in the store I was then moved to another store which is busier and allowing me another opportunity to improve the store and increase sales. 
 	</li>
-	</p>
-	</font> </div>
+	
+	 </div>
  </body>
 </html>
