--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 	 </div>
  <div>	
 	 
-
+<p>
 ·	Experienced sales associate who is looking for another company to grow with and further achieve success. I want to apply my knowledge of customer service to help ensure a positive experience for the customer.
-	 </font> 	 </div>
+	 </p>	 </div>
  <div>
 	 <ul>  
 	
