--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
  <div>	
 	 
 <p>    
-·.  <div   id="content-Experienced sales associate who is looking for another company to grow with and further achieve success. I want to apply my knowledge of customer service to help ensure a positive experience for the customer.
+·.  
+      id="content-Experienced sales associate who is looking for another company to grow with and further achieve success. I want to apply my knowledge of customer service to help ensure a positive experience for the customer.>
 	 </p>	 </div>
  <div>
 	 <ul>  
