--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
 	 </div>
  <div>	
 	 
-<p>   
+<p>   <h3>
      <Experienced sales associate who is looking for another company to grow with and further achieve success. I want to apply my knowledge of customer service to help ensure a positive experience for the customer.”>
-	 </p>	 </div>
+	     </p>	</h3> </div>
  <div>
 	 <ul>  
 	
-	<h2> Education
-		GENERAL EDUCATION DIPLOMA | 2011 | GLENDALE COMMUNITY COLLEGE </h2>
+	<h3> Education
+		GENERAL EDUCATION DIPLOMA | 2011 | GLENDALE COMMUNITY COLLEGE </h3>
 
  | UINVERSAL TECHNICAL INSTITUTE 
  <li>	Completed 3 courses required for a Bachelor’s Degree in Auto- Diesel Mechanics
