--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
  <head>
-	 <link rel="stylesheet" type="text/css" href="style.css"
+	 link rel="stylesheet" type="text/css" href="style.css"
 </head>
  <body>
 	
@@ -16,14 +16,14 @@
 	 </div>
  <div>	
 	 
-<p>   <h3>
+   <h3>
      <Experienced sales associate who is looking for another company to grow with and further achieve success. I want to apply my knowledge of customer service to help ensure a positive experience for the customer.”>
-	     </p>	</h3> </div>
+	   	</h3> </div>
  <div>
 	 <ul>  
 	
-	<h3> Education
-		GENERAL EDUCATION DIPLOMA | 2011 | GLENDALE COMMUNITY COLLEGE </h3>
+		 <h3> Education</h3>
+		<h3>GENERAL EDUCATION DIPLOMA | 2011 | GLENDALE COMMUNITY COLLEGE </h3>
 
  | UINVERSAL TECHNICAL INSTITUTE 
  <li>	Completed 3 courses required for a Bachelor’s Degree in Auto- Diesel Mechanics
