--- a/index.html
+++ b/index.html
@@ -36,14 +36,15 @@
 		
 			
 		 <h3>	<u> Skills & Abilities	MANAGEMENT </u> </h3>
-
-	Assistant Manager at Jackons Food Stores, Managing the concession stand at AMC Theaters. Both positions require the ability to properly manage time and employees. Prompting me to be capable of multi-tasking while preforming quality work.
-SALES
-	With a plethora of experience in customer service, sales come naturally to me and allows me to establish a positive relationship with the customer(s) further increasing my ability to sell to customers. Also I have experience with add on sales or suggestive selling. 
-COMMUNICATION
-	Presenting myself to others in introductions is something that I can do with ease and comfort. Talking with my fellow coworkers about tasks that need to be accomplished or explain how a procedure is properly completed. I believe that it is vital to a function workplace to properly convey any discrepancies that someone may have to prevent from any negative connotations. 
-LEADERSHIP
-	As an Assistant Manager setting a proper leadership example is important for my employees. I am not afraid to take charge over a situation and make sure it is taken care of. I also take on a leadership role within my family, as I am the predominate “father figure” in my nephew’s life. This puts the standard of being a role model that is appropriate for a child, or for any one for that matter.
+<ul>
+	<li>Assistant Manager at Jackons Food Stores</li> <li>Managing the concession stand at AMC Theaters</li> Both positions require the ability to properly manage time and employees. Prompting me to be capable of multi-tasking while preforming quality work.
+	<h3>SALES</h3>
+	<li>With a plethora of experience in customer service, sales come naturally to me and allows me to establish a positive relationship with the customer(s) further increasing my ability to sell to customers.</li> <li>Also I have experience with add on sales or suggestive selling.</li> 
+	<h3>COMMUNICATION</h3>
+	<li>Presenting myself to others in introductions is something that I can do with ease and comfort.</li> <li>Talking with my fellow coworkers about tasks that need to be accomplished or explain how a procedure is properly completed.</li> <li>I believe that it is vital to a function workplace to properly convey any discrepancies that someone may have to prevent from any negative connotations.</li> 
+	<h3>LEADERSHIP</h3>	
+	<li>As an Assistant Manager setting a proper leadership example is important for my employees.</li> <li>I am not afraid to take charge over a situation and make sure it is taken care of.</li> <li>I also take on a leadership role within my family, as I am the predominate “father figure” in my nephew’s life.</li> <li>This puts the standard of being a role model that is appropriate for a child, or for any one for that matter.</li>
+		 </ul>
 		 	 </div>
 	 
 	 
