--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
 <div>
 	
 
-	<h4>	Experience	</h4>	
-	<li>	<u>	SALES ASSOCIATE | WALMART | NOVEMBER 2010 – FEBRUARY 2012 </u>
-·	Starting out as just a cart pusher I worked my way up to be part of the overnight stock crew. This taught me how to be productive in the upmost efficient way, have self-discipline, time management, and to make sure the job is done properly.
-<i>	SALES ASSOCIATE | AMC THEATERS | MARCH 2013 – FEBRUARY 2014 
+	<h4>	<u>Experience </u>	</h4>	
+	<h4>	<u>	SALES ASSOCIATE | WALMART | NOVEMBER 2010 – FEBRUARY 2012 </u> </h4> <ul>
+·	<li>Starting out as just a cart pusher I worked my way up to be part of the overnight stock crew.</li> <li>This taught me how to be productive in the upmost efficient way, have self-discipline, time management, and to make sure the job is done properly.</li>
+	<h4> <u>SALES ASSOCIATE | AMC THEATERS | MARCH 2013 – FEBRUARY 2014 </u> </h4>
 ·	Starting out as a counter cashier I worked my way up to being a bar back at the concession stands, this was a physically demanding job that needed to be completed within a certain time range. I was then promoted to running the entire concession stand and allowing my coworkers to get their breaks and solve any issues that surfaced.
 
 	<li>	<u>	CUSTOMER SALES REPRESENTATIVE | JACKSONS FOOD STORES | FEBRAURY 2014 - </u>
