--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 	<h4> <u>SALES ASSOCIATE | AMC THEATERS | MARCH 2013 – FEBRUARY 2014 </u> </h4>
 · <ul>	<li>Starting out as a counter cashier I worked my way up to being a bar back at the concession stands, this was a physically demanding job that needed to be completed within a certain time range.</li> <li>I was then promoted to running the entire concession stand and allowing my coworkers to get their breaks and solve any issues that surfaced.<li>
 	</ul>      		<ul>
-		<u>	CUSTOMER SALES REPRESENTATIVE | JACKSONS FOOD STORES | FEBRAURY 2014 - </u>
+	<h4>	<u>	CUSTOMER SALES REPRESENTATIVE | JACKSONS FOOD STORES | FEBRAURY 2014 - </u> </h4>
 ·	<li>Starting out as a cashier who had typical duties such as putting away stock, stocking the coolers, and making sure that the coffee was always fresh.</li> <li> As I continued to work with the company my responsibilities grew.</li> <li>I began working the overnight shift and this put me in charge of running the store alone and making sure that it was ready for the morning crew.</li> <li>I also moved up to be an assistant in training, it was turning that time I transferred to a different store to learn how the other stores functioned.</li> <li>After completing my training, I was moved to another store which allowed me to officially be an assistant manager.</li> <li>It was during this time that I increased sales and over all traffic flow of the store.</li> <li>It was due to this vast improvement in the store I was then moved to another store which is busier and allowing me another opportunity to improve the store and increase sales. 
 	</li>
 	
