--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
  <div>
 	 <ul>  
 	
-		 <h3> Education</h3>
-		<h3>GENERAL EDUCATION DIPLOMA | 2011 | GLENDALE COMMUNITY COLLEGE </h3>
+		 <h3> <u>Education</u> </h3>
+		 <h3>	<u>GENERAL EDUCATION DIPLOMA | 2011 | GLENDALE COMMUNITY COLLEGE</u> </h3>
 
- | UINVERSAL TECHNICAL INSTITUTE 
+		 <h3>	<u>UINVERSAL TECHNICAL INSTITUTE</u>	</h3> 
  <li>	Completed 3 courses required for a Bachelor’s Degree in Auto- Diesel Mechanics
 ·	 <li>	Attended the school from September 2015 through June 2016
 		</li> </ul>	 	 </div>
