--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 <div>
 	
 
-	<h4>	<u>Experience </u>	</h4>	
+	<h4>	Experience </h4>	
 	<h4>	<u>	SALES ASSOCIATE | WALMART | NOVEMBER 2010 – FEBRUARY 2012 </u> </h4> <ul>
 ·	<li>Starting out as just a cart pusher I worked my way up to be part of the overnight stock crew.</li> <li>This taught me how to be productive in the upmost efficient way, have self-discipline, time management, and to make sure the job is done properly.</li>
 	
