--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	 
 	<div id="container">
 		<div id="content-contact">
-			<h1>Nolan James Chostner</h1>
+			<h1> <u>Nolan James Chostner</u> </h1>
 			<h2>19844 N 17th Dr</h2>
 			<h2>Phoenix AZ 85027</h2>
 			<h2>623-202-5232</h2>
