--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 			
 		 <h3>	<u> Skills & Abilities	MANAGEMENT </u> </h3>
 <ul>
-	<li>Assistant Manager at Jackons Food Stores</li> <li>Managing the concession stand at AMC Theaters</li> Both positions require the ability to properly manage time and employees. Prompting me to be capable of multi-tasking while preforming quality work.
+	<li>Assistant Manager at Jackons Food Stores</li> <li>Managing the concession stand at AMC Theaters</li> <li>Both positions require the ability to properly manage time and employees.</li> <li>Prompting me to be capable of multi-tasking while preforming quality work.</li>
 	<h3>SALES</h3>
 	<li>With a plethora of experience in customer service, sales come naturally to me and allows me to establish a positive relationship with the customer(s) further increasing my ability to sell to customers.</li> <li>Also I have experience with add on sales or suggestive selling.</li> 
 	<h3>COMMUNICATION</h3>
