--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
  <div>	
 	 
    <h3>
-     <Experienced sales associate who is looking for another company to grow with and further achieve success. I want to apply my knowledge of customer service to help ensure a positive experience for the customer.”>
+     <Experienced sales associate who is looking for another company to grow with and further achieve success. 
+	I want to apply my knowledge of customer service to help ensure a positive experience for the customer.”>
 	   	</h3> </div>
  <div>
 	 <ul>  
@@ -37,30 +38,47 @@
 			
 		 <h3>	<u> Skills & Abilities	MANAGEMENT </u> </h3>
 <ul>
-	<li>Assistant Manager at Jackons Food Stores</li> <li>Managing the concession stand at AMC Theaters</li> <li>Both positions require the ability to properly manage time and employees.</li> <li>Prompting me to be capable of multi-tasking while preforming quality work.</li>
-	<h3>SALES</h3>
-	<li>With a plethora of experience in customer service, sales come naturally to me and allows me to establish a positive relationship with the customer(s) further increasing my ability to sell to customers.</li> <li>Also I have experience with add on sales or suggestive selling.</li> 
-	<h3>COMMUNICATION</h3>
-	<li>Presenting myself to others in introductions is something that I can do with ease and comfort.</li> <li>Talking with my fellow coworkers about tasks that need to be accomplished or explain how a procedure is properly completed.</li> <li>I believe that it is vital to a function workplace to properly convey any discrepancies that someone may have to prevent from any negative connotations.</li> 
-	<h3>LEADERSHIP</h3>	
-	<li>As an Assistant Manager setting a proper leadership example is important for my employees.</li> <li>I am not afraid to take charge over a situation and make sure it is taken care of.</li> <li>I also take on a leadership role within my family, as I am the predominate “father figure” in my nephew’s life.</li> <li>This puts the standard of being a role model that is appropriate for a child, or for any one for that matter.</li>
+	<li>Assistant Manager at Jackons Food Stores</li> <li>Managing the concession stand at AMC Theaters</li> 
+	<li>Both positions require the ability to properly manage time and employees.</li> 
+	<li>Prompting me to be capable of multi-tasking while preforming quality work.</li>
+		<h3>SALES</h3>
+	
+	<li>With a plethora of experience in customer service, sales come naturally to me and allows me to establish a positive relationship with the customer(s) further increasing my ability to sell to customers.</li> 
+	<li>Also I have experience with add on sales or suggestive selling.</li> 
+					<h3>COMMUNICATION</h3>
+	
+	<li>Presenting myself to others in introductions is something that I can do with ease and comfort.</li> 
+	<li>Talking with my fellow coworkers about tasks that need to be accomplished or explain how a procedure is properly completed.</li> 
+	<li>I believe that it is vital to a function workplace to properly convey any discrepancies that someone may have to prevent from any negative connotations.</li> 
+					<h3>LEADERSHIP</h3>	
+	<li>As an Assistant Manager setting a proper leadership example is important for my employees.</li> 
+	<li>I am not afraid to take charge over a situation and make sure it is taken care of.</li> 
+	<li>I also take on a leadership role within my family, as I am the predominate “father figure” in my nephew’s life.</li> 
+	<li>This puts the standard of being a role model that is appropriate for a child, or for any one for that matter.</li>
 		 </ul>
 		 	 </div>
 	 
 	 
-<div>
+		<div>
 	
 
-	<h4>	Experience </h4>	
-	<h4>	<u>	SALES ASSOCIATE | WALMART | NOVEMBER 2010 – FEBRUARY 2012 </u> </h4> <ul>
-·	<li>Starting out as just a cart pusher I worked my way up to be part of the overnight stock crew.</li> <li>This taught me how to be productive in the upmost efficient way, have self-discipline, time management, and to make sure the job is done properly.</li>
+				<h4>  Experience </h4>	
+			<h4>  <u>  SALES ASSOCIATE | WALMART | NOVEMBER 2010 – FEBRUARY 2012 </u> </h4> <ul>
+	<li>Starting out as just a cart pusher I worked my way up to be part of the overnight stock crew.</li> 
+			<li>This taught me how to be productive in the upmost efficient way, have self-discipline, time management, and to make sure the job is done properly.</li>
 	
-	<h4> <u>SALES ASSOCIATE | AMC THEATERS | MARCH 2013 – FEBRUARY 2014 </u> </h4>
-· <ul>	<li>Starting out as a counter cashier I worked my way up to being a bar back at the concession stands, this was a physically demanding job that needed to be completed within a certain time range.</li> <li>I was then promoted to running the entire concession stand and allowing my coworkers to get their breaks and solve any issues that surfaced.<li>
+			<h4> <u>SALES ASSOCIATE | AMC THEATERS | MARCH 2013 – FEBRUARY 2014 </u> </h4> 
+			<ul>
+	<li>Starting out as a counter cashier I worked my way up to being a bar back at the concession stands, this was a physically demanding job that needed to be completed within a certain time range.</li> <li>I was then promoted to running the entire concession stand and allowing my coworkers to get their breaks and solve any issues that surfaced.<li>
 	</ul>      		<ul>
-	<h4>	<u>	CUSTOMER SALES REPRESENTATIVE | JACKSONS FOOD STORES | FEBRAURY 2014 - Current</u> </h4>
-·	<li>Starting out as a cashier who had typical duties such as putting away stock, stocking the coolers, and making sure that the coffee was always fresh.</li> <li> As I continued to work with the company my responsibilities grew.</li> <li>I began working the overnight shift and this put me in charge of running the store alone and making sure that it was ready for the morning crew.</li> <li>I also moved up to be an assistant in training, it was turning that time I transferred to a different store to learn how the other stores functioned.</li> <li>After completing my training, I was moved to another store which allowed me to officially be an assistant manager.</li> <li>It was during this time that I increased sales and over all traffic flow of the store.</li> <li>It was due to this vast improvement in the store I was then moved to another store which is busier and allowing me another opportunity to improve the store and increase sales. 
-	</li>
+		<h4>	<u>	CUSTOMER SALES REPRESENTATIVE | JACKSONS FOOD STORES | FEBRAURY 2014 - Current</u> </h4>
+	<li>Starting out as a cashier who had typical duties such as putting away stock, stocking the coolers, and making sure that the coffee was always fresh.</li> 
+	<li> As I continued to work with the company my responsibilities grew.</li> 
+	<li>I began working the overnight shift and this put me in charge of running the store alone and making sure that it was ready for the morning crew.</li> 
+	<li>I also moved up to be an assistant in training, it was turning that time I transferred to a different store to learn how the other stores functioned.</li> 
+	<li>After completing my training, I was moved to another store which allowed me to officially be an assistant manager.</li> 
+	<li>It was during this time that I increased sales and over all traffic flow of the store.</li> 
+	<li>It was due to this vast improvement in the store I was then moved to another store which is busier and allowing me another opportunity to improve the store and increase sales.</li>
 	
 	 </div>
  </body>
