--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
  <div>	
 	 
    <h3>
-     <Experienced sales associate who is looking for another company to grow with and further achieve success. 
-	I want to apply my knowledge of customer service to help ensure a positive experience for the customer.”>
+     Experienced sales associate who is looking for another company to grow with and further achieve success. 
+	I want to apply my knowledge of customer service to help ensure a positive experience for the customer.”
 	   	</h3> </div>
  <div>
 	 <ul>  
 	
-		 <h3> <u>Education</u> </h3>
+		 <h3> <u>EDUCATION</u> </h3>
 		 <h3>	<u>GENERAL EDUCATION DIPLOMA | 2011 | GLENDALE COMMUNITY COLLEGE</u> </h3>
 
 		 <h3>	<u>UINVERSAL TECHNICAL INSTITUTE</u>	</h3> 
@@ -36,7 +36,7 @@
 	 <div>
 		
 			
-		 <h3>	<u> Skills & Abilities	MANAGEMENT </u> </h3>
+		 	<h3>  <u>SKILLS AND ABILITES MANAGEMENT</u> </h3>
 <ul>
 	<li>Assistant Manager at Jackons Food Stores</li> <li>Managing the concession stand at AMC Theaters</li> 
 	<li>Both positions require the ability to properly manage time and employees.</li> 
