--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 	 </div>
  <div>	
 	 
-   <h3>
+   <h2
      Experienced sales associate who is looking for another company to grow with and further achieve success. 
-	I want to apply my knowledge of customer service to help ensure a positive experience for the customer.”
-	   	</h3> </div>
+	I want to apply my knowledge of customer service to help ensure a positive experience for the customer.
+	   	</h2 </div>
  <div>
 	 <ul>  
 	
