--- a/index.html
+++ b/index.html
@@ -69,7 +69,8 @@
 	
 			<h4> <u>SALES ASSOCIATE | AMC THEATERS | MARCH 2013 – FEBRUARY 2014 </u> </h4> 
 			<ul>
-	<li>Starting out as a counter cashier I worked my way up to being a bar back at the concession stands, this was a physically demanding job that needed to be completed within a certain time range.</li> <li>I was then promoted to running the entire concession stand and allowing my coworkers to get their breaks and solve any issues that surfaced.<li>
+	<li>Starting out as a counter cashier I worked my way up to being a bar back at the concession stands, this was a physically demanding job that needed to be completed within a certain time range.</li> 
+				<li>I was then promoted to running the entire concession stand and allowing my coworkers to get their breaks and solve any issues that surfaced.</li>
 	</ul>      		<ul>
 		<h4>	<u>	CUSTOMER SALES REPRESENTATIVE | JACKSONS FOOD STORES | FEBRAURY 2014 - Current</u> </h4>
 	<li>Starting out as a cashier who had typical duties such as putting away stock, stocking the coolers, and making sure that the coffee was always fresh.</li> 
